# my-alloc

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  clangd_cmake.sh  gdb_build_run.sh  tests_build_run.sh  tests_build_run_colors.sh  update_cmake.sh
include/: alloc.h  alloc_common.h  alloc_error.h  arena.h  mmapAlloc.h  pool.h  sbrkAlloc.h
src/: alloc.c  arena.c  mmapAlloc.c  pool.c  sbrkAlloc.c
test/: test_example.c
test/alloc/: test_myAlloc.c  test_myFree.c  test_myRealloc.c
test/arena/: test_arenaAlloc.c  test_arenaCreate.c  test_arenaDestroy.c  test_arenaReset.c
test/mmap/: test_mmapAlloc.c  test_mmapFree.c  test_mmapRealloc.c
test/pool/: test_poolAlloc.c  test_poolCreate.c  test_poolDestroy.c  test_poolFree.c
test/sbrk/: test_sbrkAlloc.c  test_sbrkFree.c  test_sbrkRealloc.c
